# flask_security_admin_demo

./: .gitignore  CHANGELOG.md  README.md  requirements.txt  setup.cfg
flask_security_admin/: __init__.py  app.py  database.py  demo_config.py
flask_security_admin/models/: system.py
flask_security_admin/templates/admin/: index.html
