[metadata]
name = flask_security_admin
version = 0.1.0
author = Glenn Lehman
author_email = glnn.lhmn@gmail.com
description = Administrative tool for backend management
long_description = file: README.md
long_description_content_type = text/markdown
keywords = setuptools flask_security flask_admin flask
license = BSD 3-Clause License
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3

[options]
packages = find:
python_requires = >=3.10
include_package_data=True

[options.entry_points]
console_scripts =
    flask_sec_admin = flask_security_admin.app:main